test/pointer/fail/Pointer_cast01.v3
//@execute = 42
component Pointer_cast01 {
	def main() -> int {
		var x = 0;
		var y = Pointer.!(x);
		return 42;
	}
}
